@@ -517,7 +517,7 @@
   <!-- Footer Start -->
 </table>
 <table width=100% border=0><tr>
-<td style="font-size:85%;">[[TimeTrackValues]] [[Version]]</td>
+<td style="font-size:85%;">[[Version]][[TimeTrackValues]]</td>
 <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
 </tr>
 </table>
